[package]
name = "linear_curve_fit"
version = "0.3.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "A `no_std` and no `alloc` library for linear curve coefficents calculation."
homepage = "https://github.com/Joker2770/linear_curve_fit"
repository = "https://github.com/Joker2770/linear_curve_fit"
authors = ["Joker2770"]
keywords = ["linear", "linear-regression", "curve-fitting"]

[dependencies]
nalgebra = { version = "0.33.2", default-features = false, features = ["libm"] }
anyhow = { version = "1.0.95", default-features = false }

[profile.dev]
codegen-units = 1   # better optimizations
lto = true          # better optimizations
debug = true        # debug symbols
opt-level = 0
incremental = false

[profile.release]
codegen-units = 1   # better optimizations
lto = true          # better optimizations
strip = true
opt-level = 3
incremental = false
